5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1590_2895.log
== TEST (2019-03-20 15:31:01) 
-- CODE:
quant = input(5)
valor = input(200)
frete = input(50)
print(quant + valor + frete)
-- OUTPUT:
5200501245.078.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:31:05) 
-- CODE:
quant = input(5)
valor = input(200)
frete = input(50)
print(quant + valor + frete)
-- EXECUTION TIME:
0.164333
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
5200501245.078.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
5200501067.095.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
520050246975.0321.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:31:53) 
-- CODE:
quant = input(5)
valor = input(200)
frete = input(50)

total = quant * valor + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = quant * valor + frete
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:31:55) 
-- CODE:
quant = input(5)
valor = input(200)
frete = input(50)

total = quant * valor + frete
print(total)
-- EXECUTION TIME:
0.130802
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = quant * valor + frete
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:31:56) 
-- CODE:
quant = input(5)
valor = input(200)
frete = input(50)

total = quant * valor + frete
print(total)
-- EXECUTION TIME:
0.193434
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = quant * valor + frete
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:32:32) 
-- CODE:
quant = input(5)
valor = input(200)
frete = input(50)

total = float(quant * valor + frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float(quant * valor + frete)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:32:33) 
-- CODE:
quant = input(5)
valor = input(200)
frete = input(50)

total = float(quant * valor + frete)
print(total)
-- EXECUTION TIME:
0.182764
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = float(quant * valor + frete)
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:36:35) 
-- CODE:
quant = float(input(5))
valor = float(input(200))
frete = float(input(50))
var = quant * valor + frete

total(input)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total(input)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:36:38) 
-- CODE:
quant = float(input(5))
valor = float(input(200))
frete = float(input(50))
var = quant * valor + frete

total(input)
print(var)
-- EXECUTION TIME:
0.207311
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 6, in <module>
    total(input)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:36:40) 
-- CODE:
quant = float(input(5))
valor = float(input(200))
frete = float(input(50))
var = quant * valor + frete

total(input)
print(var)
-- EXECUTION TIME:
0.104222
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 6, in <module>
    total(input)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:36:51) 
-- CODE:
quant = float(input(5))
valor = float(input(200))
frete = float(input(50))
var = (quant * valor) + frete

total(input)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total(input)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:36:53) 
-- CODE:
quant = float(input(5))
valor = float(input(200))
frete = float(input(50))
var = (quant * valor) + frete

total(input)
print(var)
-- EXECUTION TIME:
0.135178
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 6, in <module>
    total(input)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:40:41) 
-- CODE:
var1 = float(input(5))
var2 = float(input(200))
var3 = float(input(50))
var4 = (var1 * var2) + var3

total = input
print(var4)
-- OUTPUT:
520050618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:40:42) 
-- CODE:
var1 = float(input(5))
var2 = float(input(200))
var3 = float(input(50))
var4 = (var1 * var2) + var3

total = input
print(var4)
-- EXECUTION TIME:
0.193029
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
520050618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
520050765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
520050240171.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:44:16) 
-- CODE:
var1 = float(input("quantidade"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))
var4 = var1 * var2 + var3

total = input
print(var4)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:44:18) 
-- CODE:
var1 = float(input("quantidade"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))
var4 = var1 * var2 + var3

total = input
print(var4)
-- EXECUTION TIME:
0.132325
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:44:38) 
-- CODE:
var1 = float(input("quantidade"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))
var4 = var1 * var2 + var3

print(var4)
-- EXECUTION TIME:
0.133861
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:44:40) 
-- CODE:
var1 = float(input("quantidade"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))
var4 = var1 * var2 + var3

print(var4)
-- EXECUTION TIME:
0.1401
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:44:40) 
-- CODE:
var1 = float(input("quantidade"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))
var4 = var1 * var2 + var3

print(var4)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:44:41) 
-- CODE:
var1 = float(input("quantidade"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))
var4 = var1 * var2 + var3

print(var4)
-- EXECUTION TIME:
0.134028
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
